# gol

./: README.md  dune-project
lib/: board.ml  dune
test/: dune  test_gol.ml
